--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.4",
-    "mocha": "^9.0.3"
+    "mocha": "^9.0.3",
+    "supertest": "^6.1.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
